--- a/standard_deviation.ipynb
+++ b/standard_deviation.ipynb
@@ -48,6 +48,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0408112",
+   "metadata": {},
+   "source": [
+    "![example](images/std_dev_example.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cba37305",
    "metadata": {},
    "source": [
