--- a/standard_deviation.ipynb
+++ b/standard_deviation.ipynb
@@ -31,6 +31,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26a76f48",
+   "metadata": {},
+   "source": [
+    "[Link to video](https://www.youtube.com/watch?v=esskJJF8pCc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a9b2214",
    "metadata": {},
    "source": [
