adds basic math

--- a/charts/boxplot_math.ipynb
+++ b/charts/boxplot_math.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "id": "a94bb52b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from IPython.display import display, Math"
    ]
   },
   {
@@ -840,7 +841,169 @@
    "id": "9969e97c",
    "metadata": {},
    "source": [
-    "![median](../../images/median_1.png)"
+    "![median](images/median_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4984a4d3",
+   "metadata": {},
+   "source": [
+    "#### data has odd length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6ce6c466",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the list is odd so we need to take the length of 5 and get the middle index of 2 to get the median result of 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#if we take the length of our data and we mod by 2, we can determine if the length is even or odd\n",
+    "# if its false, then we have an odd length\n",
+    "sorted_test = [1,2,3,4,5]\n",
+    "is_even = len(sorted_test) % 2 == 0\n",
+    "sorted_result = 'even' if is_even else 'odd'\n",
+    "n = len(sorted_test)\n",
+    "mid = n // 2 # this divides by 2 and returns the integer part\n",
+    "sorted_median = sorted_test[mid]\n",
+    "print(f\"the list is {sorted_result} so we need to take the length of {n} and get the middle index of {mid} to get the median result of {sorted_median}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "472ee220",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted_test[mid])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04aaf48f",
+   "metadata": {},
+   "source": [
+    "#### data has even length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a346aa01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list is even so we need to take the length of 6 and the middle index of 3. \n",
+      "      This actually gives us two numbers. We have the numbers 3 and 4.\n",
+      "      To get the median we need to get the mean of these two numbers to get a result of 3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_test = [1,2,3,4,5,6]\n",
+    "n = len(even_test)\n",
+    "is_even = n % 2 == 0\n",
+    "sorted_even_result = 'even' if is_even else 'odd'\n",
+    "even_mid = n // 2\n",
+    "even_median = (even_test[even_mid - 1] + even_test[even_mid]) / 2\n",
+    "print(f\"\"\"The list is {sorted_even_result} so we need to take the length of {n} and the middle index of {even_mid}. \n",
+    "      This actually gives us two numbers. We have the numbers 3 and 4.\n",
+    "      To get the median we need to get the mean of these two numbers to get a result of {even_median}\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "f3f6e42e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first number is 3 and the second number is 4.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle (3+4)/2=3.5$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "first_number = even_test[even_mid-1]\n",
+    "second_number = even_test[even_mid]\n",
+    "test_result = (first_number + second_number) / 2\n",
+    "print(f\"The first number is {first_number} and the second number is {second_number}.\")\n",
+    "\n",
+    "display(Math(f'(%s+%s)/2=%s' %(first_number, second_number, test_result)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8aeec264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's build a custom median functio\n",
+    "def custom_median(data):\n",
+    "    sorted_data = sorted(data)\n",
+    "    n = len(sorted_data)\n",
+    "    mid = n // 2\n",
+    "\n",
+    "    if n % 2 == 0:  # even length\n",
+    "        return (sorted_data[mid - 1] + sorted_data[mid]) / 2\n",
+    "    else:\n",
+    "        return sorted_data[mid]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "19e48c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The custom median of the data is: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now if we go back to our original dataset, we can get the median\n",
+    "median_value = custom_median(data)\n",
+    "print(f\"The custom median of the data is: {median_value}\")"
    ]
   },
   {
@@ -849,6 +1012,219 @@
    "metadata": {},
    "source": [
     "#### Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "217b2618",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median error correct count is: 4.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_correct_count_median = ds['error_correct_counts'].median()\n",
+    "print(f\"The median error correct count is: {error_correct_count_median}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "4979806c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median error correct amount is: 1.125\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_correct_amount_median = ds['error_correct_amounts'].median()\n",
+    "print(f\"The median error correct amount is: {error_correct_amount_median}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "2164fc38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_ids</th>\n",
+       "      <th>error_correct_counts</th>\n",
+       "      <th>error_correct_amounts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transaction_ids  error_correct_counts  error_correct_amounts\n",
+       "0                1                     4                   1.00\n",
+       "1                2                     7                   1.75\n",
+       "2                3                    10                   2.50\n",
+       "3                4                     5                   1.25\n",
+       "4                5                     0                   0.00\n",
+       "5                6                     2                   0.50"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "8c820ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "transaction_ids          3.500\n",
+       "error_correct_counts     4.500\n",
+       "error_correct_amounts    1.125\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets test that with our custom function\n",
+    "column_medians = ds.apply(custom_median, axis=0)\n",
+    "column_medians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "08c4b50b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    2.0\n",
+       "2    3.0\n",
+       "3    4.0\n",
+       "4    0.0\n",
+       "5    2.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if we want row medians\n",
+    "row_medians = ds.apply(custom_median, axis=1)\n",
+    "row_medians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "50615182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n",
+      "0.0\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Series([1,4,1]).median())\n",
+    "print(pd.Series([2,7,1.75]).median())\n",
+    "print(pd.Series([3,10,2.50]).median())\n",
+    "print(pd.Series([4,5,1.25]).median())\n",
+    "print(pd.Series([5,0,0]).median())\n",
+    "print(pd.Series([6,2,0.5]).median())"
    ]
   },
   {
