--- a/charts/boxplot_math.ipynb
+++ b/charts/boxplot_math.ipynb
@@ -841,7 +841,7 @@
    "id": "9969e97c",
    "metadata": {},
    "source": [
-    "![median](images/median_1.png)"
+    "![median](../images/median_1.png)"
    ]
   },
   {
