adds numpy entries

--- a/statistics/acf.ipynb
+++ b/statistics/acf.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ff775e48",
+   "metadata": {},
+   "source": [
+    "# ACF Auto Correlation Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "893fd552",
    "metadata": {},
    "outputs": [],
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1e4f8f3f",
    "metadata": {},
    "outputs": [
@@ -29,35 +37,17 @@
      "data": {
       "text/plain": [
        "array([ 0.        , -0.1382643 ,  0.55090353,  1.90866233,  1.10191025,\n",
-       "        0.53720022,  1.95525297,  2.13611181,  1.02580388,  1.26062276,\n",
-       "        0.41901824, -0.17241699,  0.12127038, -1.82839098, -3.00479152,\n",
-       "       -2.66564159, -2.87878023, -1.70089883, -2.09865326, -2.88136098,\n",
-       "       -0.55130392, -0.61168904, -0.36065413, -1.67720607, -1.71842698,\n",
-       "       -1.09197629, -1.91537698, -0.96506587, -1.2761848 , -1.18502311,\n",
-       "       -1.43122279,  0.85042223,  0.58179834, -0.65045209,  0.36722845,\n",
-       "       -0.96378374, -0.46578502, -2.28571964, -2.9281898 , -1.85287162,\n",
-       "       -0.55854355, -0.21961221, -0.26937683, -0.48966747, -1.82128922,\n",
-       "       -1.99474666, -1.85696144, -0.24275078,  0.17369274, -1.64145523,\n",
-       "       -0.82493469, -0.96253657, -1.3506976 , -0.33381203,  0.7973311 ,\n",
-       "        1.48941189,  0.2033708 , -0.16685282,  0.21446646,  1.12567165,\n",
-       "        0.30879592,  0.03049817, -1.08498626, -1.95569701, -0.55646208,\n",
-       "        0.96671657,  0.60469148,  1.42681693,  1.36040788,  0.30716576,\n",
-       "        0.57641164,  1.94152471,  1.32324126,  2.49091254, -0.87610633,\n",
-       "        0.20862807,  0.23308672, -0.13584665, -0.00333188, -1.98990123,\n",
-       "       -1.61260275, -0.77170935,  0.9376975 ,  0.13811803, -0.71181098,\n",
-       "       -1.00002473,  0.21538481,  0.47952047, -0.19409587,  0.37740032,\n",
-       "        0.36125778,  1.22152543,  0.15301471, -0.22055185, -0.54649445,\n",
-       "       -1.84606106, -0.99612247, -0.43623045, -0.30024786, -0.44476064])"
+       "        0.53720022,  1.95525297,  2.13611181,  1.02580388,  1.26062276])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.random.seed(42)\n",
-    "N = 100\n",
+    "N = 10\n",
     "phi = 0.7\n",
     "eps = np.random.normal(size=N)\n",
     "ts = np.zeros(N)\n",
@@ -68,80 +58,209 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "904a903d",
-   "metadata": {},
-   "source": [
-    "## our custom code"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b07f3981",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlags = 10"
+    "nlags = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e40add14",
+   "metadata": {},
+   "source": [
+    "## 1. Compute the mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edda29ab",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "    \\mu = \\frac{1}{N} \\sum_{t=0}^{N-1} x_t\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a9290d83",
+   "execution_count": 18,
+   "id": "6a081b4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.asarray(ts, dtype=float)\n",
-    "N = len(arr)\n",
-    "if nlags >= N:\n",
-    "    raise ValueError('nlags must be strictly less than the length of the series')"
+    "def compute_mean(x):\n",
+    "    \"\"\"\n",
+    "    Compute mu = (1/N) * sum(x_t) for a list or iterable x\n",
+    "    \"\"\"\n",
+    "    N = len(x)\n",
+    "    return sum(x) / N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "199d637a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.0338203441518252)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# compute the mean, then center the series\n",
-    "mu = arr.mean()\n",
-    "y = arr - mu # y_t - x_t - mu"
+    "mean = compute_mean(ts)\n",
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "622dba6f",
+   "metadata": {},
+   "source": [
+    "## 2. Center the Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d9e8423",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "    y_t = x_t - \\mu  \\text{   for } t = 0,...,N-1\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ed9f87",
+   "metadata": {},
+   "source": [
+    "from now on, we'll think in terms of $y_t$, which has a mean zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b84246ca",
+   "metadata": {},
+   "source": [
+    "If you are unsure about centering a series, there is a notebook in the statistics folder called centering_a_series.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f6022801",
+   "execution_count": 13,
+   "id": "559a71d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(-1.0338203441518252),\n",
+       " np.float64(-1.1720846453230098),\n",
+       " np.float64(-0.482916816870962),\n",
+       " np.float64(0.8748419813528043),\n",
+       " np.float64(0.06808990897807932),\n",
+       " np.float64(-0.4966201239100727),\n",
+       " np.float64(0.9214326255247931),\n",
+       " np.float64(1.102291463774716),\n",
+       " np.float64(-0.008016464538198598),\n",
+       " np.float64(0.22680241516367805)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gamma0 = (y * y).sum() / N\n",
-    "if gamma0 == 0:\n",
-    "    # perfectly constant series - all acfs undefined except at lag 0\n",
-    "    acf_all = np.zeros(nlags + 1, dtype=float)\n",
-    "    acf_all[0] = 1.0\n",
-    "    print(f'acf_all: {acf_all}')\n"
+    "yt = [x-mean for x in ts]\n",
+    "yt"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "023774a9",
+   "cell_type": "markdown",
+   "id": "4418f546",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "acf_vals = np.empty(nlags + 1, dtype=float)\n",
-    "for k in range(nlags + 1):\n",
-    "    numerator = np.dot(y[:N-k], y[k: N]) / N\n",
-    "    acf_vals[k] = numerator / gamma0"
+    "the (biased) autocovariance at log k is:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67b24bb",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "  \\gamma(k) = \\frac{1}{N} \\sum_{t=0}^{N-1-k} y_t\\,y_{t+k}  \n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24894804",
+   "metadata": {},
+   "source": [
+    "Note that if k = , this reduces to the variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02322ff0",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "  \\gamma(0) = \\frac{1}{N} \\sum_{t=0}^{N-1} y^2_t  \n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c05dcf",
+   "metadata": {},
+   "source": [
+    "for k > 0, you only sum up to N - 1 - k so that t + k is still in range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b4f1f6f",
+   "metadata": {},
+   "source": [
+    "Finally, the autocorrelation at lag k is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "443ed81a",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "    p(k) = \\frac{\\gamma_{k}}{\\gamma_{0}}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f53e0b0",
+   "metadata": {},
+   "source": [
+    "By construction, p(0) = 1.0, and p(k) (for k > 0) tells you how 'similar' the series is to itself k steps"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cca5742",
+   "id": "6a3a1801",
    "metadata": {},
    "outputs": [],
    "source": []
