--- a/numpy/06-methods.ipynb
+++ b/numpy/06-methods.ipynb
@@ -63,9 +63,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98661486",
+   "metadata": {},
+   "source": [
+    "### tolist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "00b211fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]],\n",
+       " [[13, 14, 15], [16, 17, 18], [19, 20, 21], [22, 23, 24]]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is just converting back what we did previously\n",
+    "# list_3d = [\n",
+    "#     [\n",
+    "#         [1,2,3],\n",
+    "#         [4,5,6],\n",
+    "#         [7,8,9],\n",
+    "#         [10,11,12]\n",
+    "#     ],\n",
+    "#     [\n",
+    "#         [13,14,15],\n",
+    "#         [16,17,18],\n",
+    "#         [19,20,21],\n",
+    "#         [22,23,24]\n",
+    "#     ]\n",
+    "# ]\n",
+    "# array_3d = np.array(list_3d)\n",
+    "array_3d.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ab4cdc6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(array_3d.tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd4cd83",
+   "metadata": {},
+   "source": [
+    "### item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ea92bea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 14, 15],\n",
+       "       [16, 17, 18],\n",
+       "       [19, 20, 21],\n",
+       "       [22, 23, 24]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_3d[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8191f991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13, 14, 15])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_3d[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f5df5f3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(15)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_3d[1, 0, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5e4856b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_3d.item((1, 0, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6ff8032",
+   "metadata": {},
+   "source": [
+    "### view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8f6509e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3],\n",
+       "        [ 4,  5,  6],\n",
+       "        [ 7,  8,  9],\n",
+       "        [10, 11, 12]],\n",
+       "\n",
+       "       [[13, 14, 15],\n",
+       "        [16, 17, 18],\n",
+       "        [19, 20, 21],\n",
+       "        [22, 23, 24]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_view = array_3d.view()\n",
+    "array_view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "057516e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[55, 55, 55],\n",
+       "        [55, 55, 55],\n",
+       "        [55, 55, 55],\n",
+       "        [55, 55, 55]],\n",
+       "\n",
+       "       [[55, 55, 55],\n",
+       "        [55, 55, 55],\n",
+       "        [55, 55, 55],\n",
+       "        [55, 55, 55]]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_3d.fill(55)\n",
+    "array_3d"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b211fa",
+   "id": "ddc82961",
    "metadata": {},
    "outputs": [],
    "source": []
