add naive forecasting and simple moving averages

--- a/numpy/10-random_numbers.ipynb
+++ b/numpy/10-random_numbers.ipynb
@@ -17,7 +17,9 @@
    "id": "445c8831",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.random.default_rng"
+   ]
   }
  ],
  "metadata": {
