--- a/playgrounds/store-440-ground_beef.ipynb
+++ b/playgrounds/store-440-ground_beef.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "b34c1b69",
    "metadata": {},
    "outputs": [],
@@ -10260,6 +10260,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea76987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = [\n",
+    "    {\n",
+    "        'date': '1/1/2025',\n",
+    "        'sales': 100\n",
+    "    },\n",
+    "        {\n",
+    "        'date': '1/1/2025',\n",
+    "        'sales': 200\n",
+    "    },\n",
+    "        {\n",
+    "        'date': '1/1/2025',\n",
+    "        'sales': 50\n",
+    "    },\n",
+    "        {\n",
+    "        'date': '1/1/2025',\n",
+    "        'sales': 75\n",
+    "    },\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
