--- a/time_series/xtras/simple_moving_average.ipynb
+++ b/time_series/xtras/simple_moving_average.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "497d607e",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "d2016743",
    "metadata": {},
    "outputs": [
@@ -368,8 +368,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "i:\\Code_maths\\env\\Lib\\site-packages\\_plotly_utils\\basevalidators.py:106: FutureWarning: The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
-      "  v = v.dt.to_pydatetime()\n"
+      "i:\\Code_maths\\env\\Lib\\site-packages\\_plotly_utils\\basevalidators.py:106: FutureWarning:\n",
+      "\n",
+      "The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
+      "\n"
      ]
     },
     {
@@ -1762,7 +1764,7 @@
          }
         },
         "title": {
-         "text": "Store 440 Fresh Ground Chuck Sales",
+         "text": "Milk",
          "x": 0.5
         },
         "width": 1400,
