fixes emv spelling

--- a/time_series/xtras/simple_moving_average.ipynb
+++ b/time_series/xtras/simple_moving_average.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "62912eee",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2bfe5547",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "70d87a37",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "1f8da641",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-06 14:21:17,506 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2025-06-06 14:21:17,506 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
+      "2025-06-06 15:00:10,723 INFO sqlalchemy.engine.Engine select pg_catalog.version()\n",
+      "2025-06-06 15:00:10,724 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-06-06 15:00:10,793 INFO sqlalchemy.engine.Engine select current_schema()\n",
+      "2025-06-06 15:00:10,793 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-06-06 15:00:10,863 INFO sqlalchemy.engine.Engine show standard_conforming_strings\n",
+      "2025-06-06 15:00:10,864 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-06-06 15:00:10,935 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2025-06-06 15:00:10,935 INFO sqlalchemy.engine.Engine SELECT pg_catalog.pg_class.relname \n",
       "FROM pg_catalog.pg_class JOIN pg_catalog.pg_namespace ON pg_catalog.pg_namespace.oid = pg_catalog.pg_class.relnamespace \n",
       "WHERE pg_catalog.pg_class.relname = %(table_name)s AND pg_catalog.pg_class.relkind = ANY (ARRAY[%(param_1)s, %(param_2)s, %(param_3)s, %(param_4)s, %(param_5)s]) AND pg_catalog.pg_table_is_visible(pg_catalog.pg_class.oid) AND pg_catalog.pg_namespace.nspname != %(nspname_1)s\n",
-      "2025-06-06 14:21:17,506 INFO sqlalchemy.engine.Engine [cached since 794.5s ago] {'table_name': \"select sale_date, concat(product_code, ' - ', product_description) as product, sum(total_sales) as sales\\nfrom sales\\nwhere sale_date between '1/1/20 ... (81 characters truncated) ... \\nand item_ring_type in ('ITEM', 'SUBD')\\nand product_code='84023020003.0'\\ngroup by sale_date, product_code, product_description\\norder by sale_date\", 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
-      "2025-06-06 14:21:17,577 INFO sqlalchemy.engine.Engine select sale_date, concat(product_code, ' - ', product_description) as product, sum(total_sales) as sales\n",
+      "2025-06-06 15:00:10,936 INFO sqlalchemy.engine.Engine [generated in 0.00084s] {'table_name': \"select sale_date, concat(product_code, ' - ', product_description) as product, sum(total_sales) as sales\\nfrom sales\\nwhere sale_date between '1/1/20 ... (81 characters truncated) ... \\nand item_ring_type in ('ITEM', 'SUBD')\\nand product_code='84023020003.0'\\ngroup by sale_date, product_code, product_description\\norder by sale_date\", 'param_1': 'r', 'param_2': 'p', 'param_3': 'f', 'param_4': 'v', 'param_5': 'm', 'nspname_1': 'pg_catalog'}\n",
+      "2025-06-06 15:00:11,007 INFO sqlalchemy.engine.Engine select sale_date, concat(product_code, ' - ', product_description) as product, sum(total_sales) as sales\n",
       "from sales\n",
       "where sale_date between '1/1/2025' and '6/1/2025'\n",
       "and store_number='440'\n",
@@ -76,8 +82,8 @@
       "and product_code='84023020003.0'\n",
       "group by sale_date, product_code, product_description\n",
       "order by sale_date\n",
-      "2025-06-06 14:21:17,578 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
-      "2025-06-06 14:21:18,682 INFO sqlalchemy.engine.Engine ROLLBACK\n"
+      "2025-06-06 15:00:11,008 INFO sqlalchemy.engine.Engine [raw sql] {}\n",
+      "2025-06-06 15:00:12,049 INFO sqlalchemy.engine.Engine ROLLBACK\n"
      ]
     }
    ],
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "d1cbb205",
    "metadata": {},
    "outputs": [
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "73b10d7f",
    "metadata": {},
    "outputs": [
@@ -142,7 +148,6 @@
        "      <th>sale_date</th>\n",
        "      <th>product</th>\n",
        "      <th>sales</th>\n",
-       "      <th>DOW</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -151,50 +156,45 @@
        "      <td>2025-02-24</td>\n",
        "      <td>84023020003.0 - AM CH MILK 1% GAL 128 OZ</td>\n",
        "      <td>25.83</td>\n",
-       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025-02-25</td>\n",
        "      <td>84023020003.0 - AM CH MILK 1% GAL 128 OZ</td>\n",
        "      <td>42.06</td>\n",
-       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025-02-26</td>\n",
        "      <td>84023020003.0 - AM CH MILK 1% GAL 128 OZ</td>\n",
        "      <td>29.52</td>\n",
-       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025-02-27</td>\n",
        "      <td>84023020003.0 - AM CH MILK 1% GAL 128 OZ</td>\n",
        "      <td>7.38</td>\n",
-       "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025-02-28</td>\n",
        "      <td>84023020003.0 - AM CH MILK 1% GAL 128 OZ</td>\n",
        "      <td>18.45</td>\n",
-       "      <td>Friday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sale_date                                   product  sales        DOW\n",
-       "0 2025-02-24  84023020003.0 - AM CH MILK 1% GAL 128 OZ  25.83     Monday\n",
-       "1 2025-02-25  84023020003.0 - AM CH MILK 1% GAL 128 OZ  42.06    Tuesday\n",
-       "2 2025-02-26  84023020003.0 - AM CH MILK 1% GAL 128 OZ  29.52  Wednesday\n",
-       "3 2025-02-27  84023020003.0 - AM CH MILK 1% GAL 128 OZ   7.38   Thursday\n",
-       "4 2025-02-28  84023020003.0 - AM CH MILK 1% GAL 128 OZ  18.45     Friday"
+       "   sale_date                                   product  sales\n",
+       "0 2025-02-24  84023020003.0 - AM CH MILK 1% GAL 128 OZ  25.83\n",
+       "1 2025-02-25  84023020003.0 - AM CH MILK 1% GAL 128 OZ  42.06\n",
+       "2 2025-02-26  84023020003.0 - AM CH MILK 1% GAL 128 OZ  29.52\n",
+       "3 2025-02-27  84023020003.0 - AM CH MILK 1% GAL 128 OZ   7.38\n",
+       "4 2025-02-28  84023020003.0 - AM CH MILK 1% GAL 128 OZ  18.45"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
