--- a/statistics/standard_deviation.ipynb
+++ b/statistics/standard_deviation.ipynb
@@ -59,7 +59,7 @@
    "id": "c0408112",
    "metadata": {},
    "source": [
-    "![example](images/std_dev_example.png)"
+    "![example](../images/std_dev_example.png)"
    ]
   },
   {
