adds score dataset

--- a/numpy/04-filled_arrays.ipynb
+++ b/numpy/04-filled_arrays.ipynb
@@ -385,8 +385,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cb3d1cce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1,2,3]\n",
+    "print(type(my_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eb6643ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.array(my_list)\n",
+    "print(type(my_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a9fbc8",
    "metadata": {},
    "outputs": [],
    "source": []
