--- a/pandas/08-time_functions.ipynb
+++ b/pandas/08-time_functions.ipynb
@@ -607,12 +607,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "id": "10337169",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def last_years_sales_date(date):\n",
+    "def sales_date_last_year(date):\n",
     "    if isinstance(date, str):\n",
     "        date = datetime.strptime(date, '%m/%d/%Y')\n",
     "    this_years_day_of_week = date.isocalendar().weekday\n",
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "id": "0e08a7e3",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
     }
    ],
    "source": [
-    "lysd = last_years_sales_date('6/7/2025')\n",
+    "lysd = sales_date_last_year('6/7/2025')\n",
     "print(f\"Last year's sales date is: {lysd}\")"
    ]
   },
