--- a/pandas/08-time_functions.ipynb
+++ b/pandas/08-time_functions.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "id": "0e08a7e3",
    "metadata": {},
    "outputs": [
@@ -636,8 +636,8 @@
     }
    ],
    "source": [
-    "lysd = sales_date_last_year('6/7/2025')\n",
-    "print(f\"Last year's sales date is: {lysd}\")"
+    "sdly = sales_date_last_year('6/7/2025')\n",
+    "print(f\"Last year's sales date is: {sdly}\")"
    ]
   },
   {
