adds exploratory time functions

--- a/pandas/08-time_functions.ipynb
+++ b/pandas/08-time_functions.ipynb
@@ -834,6 +834,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "677914fa",
+   "metadata": {},
+   "source": [
+    "## Finding Missing Dates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "12995e5e",
