--- a/statistics/distrubtions.ipynb
+++ b/statistics/distrubtions.ipynb
@@ -184,7 +184,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "57579c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.2481025415142355)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies['Rating'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
+   "id": "045b8058",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.6900527945273304)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss.norm.cdf(x = 6, loc=5.38, scale=1.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8678fdd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.30994720547266963)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-ss.norm.cdf(x = 6, loc=5.38, scale=1.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e1fcaf4e",
    "metadata": {},
    "outputs": [
@@ -194,7 +257,7 @@
        "np.float64(32.81516587677725)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
