--- a/playgrounds/atrix_whiteboard.ipynb
+++ b/playgrounds/atrix_whiteboard.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b8db09e6",
    "metadata": {},
    "outputs": [],
@@ -749,12 +749,446 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dd7e4e5",
+   "metadata": {},
+   "source": [
+    "#### Locators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "644ddf5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = Atrax.Series([10, 20, 30], name=\"sales\", index=[\"a\", \"b\", \"b\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6e8224c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><tr><td style='padding:4px;'>a</td><td style='padding:4px; '>10</td></tr><tr><td style='padding:4px;'>b</td><td style='padding:4px; '>20</td></tr><tr><td style='padding:4px;'>b</td><td style='padding:4px; '>30</td></tr><tr><td colspan='1'>Name: sales, dtype: int</td></tr></table>"
+      ],
+      "text/plain": [
+       "a   10\n",
+       "b   20\n",
+       "b   30\n",
+       "Name: sales, dtype: int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "edeecd6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.loc[\"b\"])\n",
+    "print(s.iloc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "302c8337",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a   10\n",
+      "b   30\n",
+      "Name: sales, dtype: int\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.loc[[\"a\", \"b\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a6faa048",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a   10\n",
+      "b   20\n",
+      "Name: sales, dtype: int\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.iloc[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "69df8d2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><tr><td style=''>0</td><td style=''>1</td></tr><tr><td style=''>1</td><td style=''>2</td></tr><tr><td style=''>2</td><td style=''>3</td></tr><tr><td style=''>3</td><td style=''>4</td></tr><tr><td colspan='2' style='font-style: bold; font-size:1.2rem;'>Name: , dtype: int</td></tr></table>"
+      ],
+      "text/plain": [
+       "0   1\n",
+       "1   2\n",
+       "2   3\n",
+       "3   4\n",
+       "Name: , dtype: int"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = Atrax.Series([1,2,3,4])\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fda4a1f",
+   "metadata": {},
+   "source": [
+    "### DataSet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de82373",
+   "id": "8fb24c35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = Atrax.DataSet([\n",
+    "    {'name': 'candy', 'qty': 2, 'price': 3.5, 'dept': 'grocery'},\n",
+    "    {'name': 'food', 'qty': 5, 'price': 4.0, 'dept': 'grocery'},\n",
+    "    {'name': 'drinks', 'qty': 1, 'price': 10.0, 'dept': 'soft drinks'}\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b72bdc7",
+   "metadata": {},
+   "source": [
+    "#### helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ade01d80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'atrax.Atrax'>\n",
+      "Data columns (total 2):\n",
+      "  qty             Non-Null Count: 3     Dtype: int\n",
+      "  price           Non-Null Count: 3     Dtype: float\n",
+      "dtypes: 2\n",
+      "Memory usage: 48 bytes (est.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ds.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6fa29126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><thead><tr><th>stat</th><th>qty</th><th>price</th></tr></thead><tbody><tr><td>mean</td><td>2.67</td><td>5.83</td></tr><tr><td>std</td><td>2.08</td><td>3.62</td></tr><tr><td>min</td><td>1</td><td>3.5</td></tr><tr><td>Q1</td><td>1</td><td>3.5</td></tr><tr><td>median</td><td>2</td><td>4.0</td></tr><tr><td>Q3</td><td>5</td><td>10.0</td></tr><tr><td>max</td><td>5</td><td>10.0</td></tr><tr><td>count</td><td>3</td><td>3</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "stat, qty, price\n",
+       "mean, 2.67, 5.83\n",
+       "std, 2.08, 3.62\n",
+       "min, 1, 3.5\n",
+       "Q1, 1, 3.5\n",
+       "median, 2, 4.0\n",
+       "Q3, 5, 10.0\n",
+       "max, 5, 10.0\n",
+       "count, 3, 3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "04b20c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><thead><tr><th>qty</th><th>price</th></tr></thead><tbody><tr><td>2</td><td>3.5</td></tr><tr><td>5</td><td>4.0</td></tr><tr><td>1</td><td>10.0</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "qty, price\n",
+       "2, 3.5\n",
+       "5, 4.0\n",
+       "1, 10.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "52d108a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.shape()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8162f58",
+   "metadata": {},
+   "source": [
+    "#### apply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d72e5048",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><thead><tr><th>name</th><th>qty</th><th>price</th></tr></thead><tbody><tr><td>candy</td><td>2</td><td>3.5</td></tr><tr><td>food</td><td>5</td><td>4.0</td></tr><tr><td>drinks</td><td>1</td><td>10.0</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "name, qty, price\n",
+       "candy, 2, 3.5\n",
+       "food, 5, 4.0\n",
+       "drinks, 1, 10.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f67c7635",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7.0, 20.0, 10.0]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = ds.apply(lambda x: x['qty'] * x['price'])\n",
+    "total\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e7cd361c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><thead><tr><th>item</th><th>total</th></tr></thead><tbody><tr><td>candy</td><td>7.0</td></tr><tr><td>food</td><td>20.0</td></tr><tr><td>drinks</td><td>10.0</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "item, total\n",
+       "candy, 7.0\n",
+       "food, 20.0\n",
+       "drinks, 10.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a new dataset\n",
+    "new_ds = ds.apply(lambda row: {\n",
+    "    'item': row['name'],\n",
+    "    'total': row['qty'] * row['price']\n",
+    "})\n",
+    "new_ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df947170",
+   "metadata": {},
+   "source": [
+    "#### groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3ba196",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d20c194b",
+   "metadata": {},
+   "source": [
+    "#### basics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8897184b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds['total'] = ds['qty'] * ds['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b1e9519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><tr><td style=''>0</td><td style=''>False</td></tr><tr><td style=''>1</td><td style=''>True</td></tr><tr><td style=''>2</td><td style=''>False</td></tr><tr><td colspan='2' style='font-style: bold; font-size:1.1rem;'>Name: (qty > 2), dtype: int</td></tr></table>"
+      ],
+      "text/plain": [
+       "0   False\n",
+       "1   True\n",
+       "2   False\n",
+       "Name: (qty > 2), dtype: int"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds['qty'] > 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d8a513f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border-collapse: collapse;'><thead><tr><th>qty</th><th>price</th><th>total</th></tr></thead><tbody><tr><td>5</td><td>4.0</td><td>20.0</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "qty, price, total\n",
+       "5, 4.0, 20.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[ds['qty'] > 2]"
+   ]
   }
  ],
  "metadata": {
