--- a/playgrounds/atrix_whiteboard.ipynb
+++ b/playgrounds/atrix_whiteboard.ipynb
@@ -23,7 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from atrax import Atrax"
+    "from atrax import Atrax\n",
+    "import pandas as pd\n",
+    "import random"
    ]
   },
   {
@@ -1476,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f2a93369",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "31a103a9",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1312b2a4",
    "metadata": {},
    "outputs": [
@@ -1946,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "60a2744a",
    "metadata": {},
    "outputs": [
@@ -2859,9 +2861,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce5c9373",
+   "metadata": {},
+   "source": [
+    "#### date_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "26ae1e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2025-01-01', '2025-01-02', '2025-01-03', '2025-01-04',\n",
+       "               '2025-01-05'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = Atrax.date_range(start=\"2025-01-01\", end=\"2025-01-05\")\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b90506c3",
+   "metadata": {},
+   "source": [
+    "#### qcut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ded2ba5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Low', 'Med', 'Low', 'Low', 'High', 'Med', 'Top', 'High']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = [10, 20, 15, 12, 30, 22, 40, 35]\n",
+    "binned = Atrax.qcut(values, q=4, labels=['Low', 'Med', 'High', 'Top'])\n",
+    "binned"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7bcd54",
+   "id": "b412aa73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'customer_id': [1031, 1010, 1050, 1048, 1017],\n",
+       " 'transaction_date': [Timestamp('2025-01-03 00:00:00'),\n",
+       "  Timestamp('2025-01-05 00:00:00'),\n",
+       "  Timestamp('2025-01-04 00:00:00'),\n",
+       "  Timestamp('2025-01-05 00:00:00'),\n",
+       "  Timestamp('2025-01-03 00:00:00')],\n",
+       " 'sales_amount': [41.34, 25.78, 31.54, 81.86, 55.48]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_customers = 5\n",
+    "num_transactions = 5\n",
+    "date_range = Atrax.date_range(start=\"2025-01-01\", end=\"2025-01-05\")\n",
+    "\n",
+    "# Generate data\n",
+    "data = {\n",
+    "    'customer_id': [random.randint(1000, 1050) for _ in range(num_transactions)],\n",
+    "    'transaction_date': [random.choice(date_range) for _ in range(num_transactions)],\n",
+    "    'sales_amount': [round(random.uniform(5.0, 100.0), 2) for _ in range(num_transactions)]\n",
+    "}\n",
+    "\n",
+    "ds = Atrax.DataSet(data)\n",
+    "#ds['transaction_date'] = pd.to_datetime(ds['transaction_date'])\n",
+    "\n",
+    "#ds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c13e6093",
    "metadata": {},
    "outputs": [],
    "source": []
